resources/css/billuc.css
:root {
    --white: #fff9eb;
    --yellow: #ffba08;
    --orange1: #faa307;
    --orange2: #f48c06;
    --orange3: #e85d04;
    --red1: #dc2f02;
    --red2: #d00000;
    --red3: #9d0208;
    --brown1: #6a040f;
    --brown2: #370617;
    --black: #03071e;
}


.white { background-color: var(--white); }
.yellow { background-color: var(--yellow); }
.orange1 { background-color: var(--orange1); }
.orange2 { background-color: var(--orange2); }
.orange3 { background-color: var(--orange3); }
.red1 { background-color: var(--red1); }
.red2 { background-color: var(--red2); }
.red3 { background-color: var(--red3); }
.brown1 { background-color: var(--brown1); }
.brown2 { background-color: var(--brown2); }
.black { background-color: var(--black); }

.white-fg { color: var(--white); }
.yellow-fg { color: var(--yellow); }
.orange1-fg { color: var(--orange1); }
.orange2-fg { color: var(--orange2); }
.orange3-fg { color: var(--orange3); }
.red1-fg { color: var(--red1); }
.red2-fg { color: var(--red2); }
.red3-fg { color: var(--red3); }
.brown1-fg { color: var(--brown1); }
.brown2-fg { color: var(--brown2); }
.black-fg { color: var(--black); }

.sans-serif { font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; }
.monospace { font-family: "Lucida Console", Monaco, monospace; }


* {
    box-sizing: border-box;
}

html {
    width: 100%;
    height: 100vh;

    background: url('../images/cool-background.png');/*var(--black);*/
    background-repeat: repeat-y;
    background-size: cover;
    color: var(--white);

    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
}

body {
    width: 100%;
    height: 100vh;

    margin: 0;
    vertical-align: middle;

    display: flex;
    flex-flow: column nowrap;
    justify-content: space-between;
    align-items: center;
}



.navbar {
    position: fixed !important;
    top: 25%;
    left: 0px;

    font-size: 1.4em;
    height: 50%;
    width: auto;
    max-width: 3.5em;

    display: flex;
    flex-flow: column nowrap;
    justify-content: center;
    align-items: flex-start;

    z-index: 4;
}

.navbar a {
    text-align: center;
    width: 100%;
    height: auto;

    box-sizing: content-box;
    padding: 20% 25%;
    background: var(--yellow);
    color: var(--black);
}

.navbar a.selected {
    pointer-events: none;
    background-color: var(--orange2);
}

.navbar a:not(.selected):hover {
    background-color: var(--orange1);
}






h1 {
    font-size: 4em;
    font-weight: 700;

    margin: 0.25em 0;
}

h2 {
    font-size: 3em;
    font-weight: 700;

    margin: 0.2em 0;
    font-family: "Lucida Console", Monaco, monospace;
}




#header {
    position: relative;

    width: 100%;
    padding: 0.5em 0;

    text-align: center;
    background: transparent;
}


#content {
    width: 100%;
    padding: 0 7.35em;
    
    text-align: center;
}






#footer {
    width: 100%;
    padding: 0.5em 0;
    margin-bottom: 0.3em;

    text-align: center;
    background: transparent;
}

#footer a {
    text-decoration: none;
    vertical-align: top;
    margin: 0.3em 0.15em;
    transition: transform 0.5s ease;
}

#footer a:hover {
    transform: scale(1.2);
}



@media screen and (max-width: 700px) {
    html {
        font-size: 0.8em;
    }
    
    .navbar {
        top: 0px;
        left: 25%;

        height: auto;
        width: 50%;
        max-height: 2em;
        max-width: none;
        
        flex-flow: row nowrap;
    }

    .navbar a {
        width: auto;
        height: 100%;
        
        padding: 5% 10%;
    }

    .navbar a:first-of-type {
        font-size: 1.15em;
    }

    #header {
        margin-top: calc(2em + 5%);
    }

    #content {
        padding: 0;
    }
}

